--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,6 @@ Date: 2011-1-28
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: Diagonal Discriminant Analysis and shrinkage-based variants. Optionally, each method can simultaneously diagonalize the covariance matrices to improve the classification rates.
-Depends: plyr
+Depends: plyr, jointDiag
 License: GPL-2
 URL: https://github.com/ramey/diagdiscrim, http://johnramey.net
