--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: diagdiscrim
 Title: Diagonal Discriminant Analysis and its Variants
-Version: 0.1.3
-Date: 2011-1-28
+Version: 0.1.4
+Date: 2011-5-18
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: Diagonal Discriminant Analysis and shrinkage-based variants. Optionally, each method can simultaneously diagonalize the covariance matrices to improve the classification rates.
-Depends: plyr, jointDiag
+Depends: foreach, jointDiag, plyr
 License: GPL-2
 URL: https://github.com/ramey/diagdiscrim, http://johnramey.net
