Updated DQDA, SDLDA, and SDQDA to have S3 classes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,6 @@
 export(dlda)
 export(dqda)
 export(model.select.rsdda)
-export(predict_dqda)
-export(predict_sdlda)
-export(predict_sdqda)
-export(predict.dlda)
 export(predict.rsdda)
 export(rsdda)
 export(sdlda)
@@ -12,4 +8,17 @@ export(sdqda)
 export(simdiag)
 S3method(dlda,default)
 S3method(dlda,formula)
+S3method(dqda,default)
+S3method(dqda,formula)
+S3method(predict,dlda)
+S3method(predict,dqda)
+S3method(predict,sdlda)
+S3method(predict,sdqda)
 S3method(print,dlda)
+S3method(print,dqda)
+S3method(print,sdlda)
+S3method(print,sdqda)
+S3method(sdlda,default)
+S3method(sdlda,formula)
+S3method(sdqda,default)
+S3method(sdqda,formula)
