Moved the code to remove an intercept term from a formula to its own function: no_intercept.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,11 @@ Collate:
     'asfari.r'
     'dlda.r'
     'dqda.r'
-    'eigendiag.r'
-    'general-eigen.r'
     'joint-diagonalization.r'
-    'jointDiag.r'
-    'pool.r'
     'rsdda.r'
     'sdlda.r'
     'sdqda.r'
     'stein-shrinkage.r'
     'simdiag.r'
     'estimates.r'
+    'helper-intercept.r'
