Added the initial code to simultaneously diagonalize the covariance matrices of two classes. We do this with an S3-class approach with the 'simdiag' function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(rsdda)
 export(sdlda)
 export(sdqda)
 export(simdiag)
+export(simdiag2)
 S3method(dlda,default)
 S3method(dlda,formula)
 S3method(dqda,default)
@@ -18,7 +19,10 @@ S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,sdlda)
 S3method(print,sdqda)
+S3method(print,simdiag)
 S3method(sdlda,default)
 S3method(sdlda,formula)
 S3method(sdqda,default)
 S3method(sdqda,formula)
+S3method(simdiag,default)
+S3method(simdiag,formula)
