Added the data-generation code for the intraclass covariance structure. Removed the references to the 'foreach' package. Updated the documentation for the 'simdiag' functions. Updated the 'simdiag2' function to accept two matrices rather than a data set; the data set is dealt with in 'simdiag.default'.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ Description: Diagonal Discriminant Analysis and
     simultaneously diagonalize the covariance matrices to
     improve the classification rates.
 Depends:
-    foreach,
     jointDiag
 License: MIT
 URL: https://github.com/ramey/diagdiscrim,
@@ -27,3 +26,5 @@ Collate:
     'estimates.r'
     'helper-intercept.r'
     'helper-simdiag2.r'
+    'data-intraclass.r'
+    'helper-transform.r'
