--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,12 @@
 export(dlda)
 export(dqda)
+export(generate_intraclass)
 export(model.select.rsdda)
 export(predict.rsdda)
 export(rsdda)
 export(sdlda)
 export(sdqda)
+export(simdiag_transform)
 export(simdiag)
 export(simdiag2)
 S3method(dlda,default)
