--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(dlda)
 export(dqda)
 export(generate_blockdiag)
 export(generate_intraclass)
+export(mdeb_shrinkage)
 export(model.select.rsdda)
 export(predict.rsdda)
 export(rsdda)
