Added option for shrunken means to diag classifiers.
To each of DLDA, DQDA, SDLDA, and SDQDA, I added the option to use an
improved estimator of the means. For now, the options are the MLE and
the proposed estimator by Tong et al. (2012), which I have implemented
as the 'tong_mean_shrinkage' function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(sdqda)
 export(simdiag_transform)
 export(simdiag)
 export(simdiag2)
+export(tong_mean_shrinkage)
 S3method(dlda,default)
 S3method(dlda,formula)
 S3method(dqda,default)
