Added function to parametric bootstrap with transform and inverse transform.
I have added the 'boot_parametric' function to bootstrap from K
populations parametrically with the option to transform and back
transform following Parrish et al. (2009). The only available
transformation currently is that of Yeo and Johnson (2000). Also, so
that the sample covariance matrices are positive definite, I have added
a shrinkage estimator from the RDA model given in Hastie et al.'s EoSL
text.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Description: Diagonal Discriminant Analysis and
     simultaneously diagonalize the covariance matrices to
     improve the classification rates.
 Depends:
-    jointDiag
+    jointDiag,
+    car
 Suggests:
     bdsmatrix
 License: MIT
@@ -35,3 +36,4 @@ Collate:
     'helper-simdiag-fastsvd.r'
     'helper-shrinkage.r'
     'helper-mean-shrinkage.r'
+    'data-parametric-bootstrap.r'
