--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,7 @@
+export(boot_parametric)
 export(cov_mle)
 export(cov_pool)
+export(cov_shrink_diag)
 export(diag_shrinkage)
 export(dlda)
 export(dqda)
@@ -15,6 +17,7 @@ export(simdiag_transform)
 export(simdiag)
 export(simdiag2)
 export(tong_mean_shrinkage)
+export(yj_inverse)
 S3method(dlda,default)
 S3method(dlda,formula)
 S3method(dqda,default)
