--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(cov_mle)
 export(cov_pool)
 export(cov_shrink_diag)
 export(diag_shrinkage)
+export(dimred_bhatta_simdiag)
 export(dlda)
 export(dqda)
 export(generate_blockdiag)
