--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(diag_shrinkage)
 export(dimred_bhatta_simdiag)
 export(dlda)
 export(dqda)
+export(fast_cov_eigen)
 export(generate_blockdiag)
 export(generate_intraclass)
 export(mdeb_shrinkage)
