Added the 'yj_marginal' function to estimate the Yeo-Johnson (marginal) transformation parameters.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(simdiag)
 export(simdiag2)
 export(tong_mean_shrinkage)
 export(yj_inverse)
+export(yj_marginal)
 S3method(dlda,default)
 S3method(dlda,formula)
 S3method(dqda,default)
