--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(bhatta_simdiag)
 export(boot_parametric)
+export(cov_list)
 export(cov_mle)
 export(cov_pool)
 export(cov_shrink_diag)
@@ -15,6 +16,7 @@ export(predict.rsdda)
 export(rsdda)
 export(sdlda)
 export(sdqda)
+export(simdiag_algorithmic)
 export(simdiag_transform)
 export(simdiag)
 export(simdiag2)
