--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: diagdiscrim
 Title: Diagonal Discriminant Analysis and its Variants
-Version: 0.2.0
-Date: 2012-02-16
+Version: 0.1.0
+Date: 2012-12-06
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: Diagonal Discriminant Analysis and
-    shrinkage-based variants. Optionally, each method can
-    simultaneously diagonalize the covariance matrices to
-    improve the classification rates.
+    shrinkage-based variants.
 Depends:
     car,
     corpcor,
@@ -27,14 +25,10 @@ Collate:
     'simdiag.r'
     'estimates.r'
     'helper-intercept.r'
-    'helper-simdiag2.r'
     'data-intraclass.r'
-    'helper-transform.r'
     'data-block-autocorrelation.r'
     'helper-cov-mle.r'
     'helper-shrinkage.r'
     'helper-mean-shrinkage.r'
     'data-parametric-bootstrap.r'
-    'bhattacharyya.r'
     'helper-pct-change.r'
-    'helper-fast-cov-eigen.r'
