--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ S3method(sdqda,default)
 S3method(sdqda,formula)
 S3method(simdiag,default)
 S3method(simdiag,formula)
+export(bhatta_simdiag)
+export(bhattacharyya)
 export(boot_parametric)
 export(cov_list)
 export(cov_mle)
@@ -24,8 +26,10 @@ export(cov_pool)
 export(cov_shrink_diag)
 export(dlda)
 export(dqda)
+export(fast_cov_eigen)
 export(generate_blockdiag)
 export(generate_intraclass)
+export(is_diagonal)
 export(mdeb_shrinkage)
 export(model.select.rsdda)
 export(predict.rsdda)
@@ -33,6 +37,8 @@ export(rsdda)
 export(sdlda)
 export(sdqda)
 export(simdiag)
+export(simdiag_cov)
+export(simdiag_transform)
 export(tong_mean_shrinkage)
 export(yj_inverse)
 export(yj_marginal)
