Updated the 'simdiag' function to be the SimDiag classifier. Closes #11

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,12 @@ S3method(dlda,default)
 S3method(dlda,formula)
 S3method(dqda,default)
 S3method(dqda,formula)
+S3method(plot,simdiag)
 S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
+S3method(predict,simdiag)
 S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,sdlda)
