--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(cov_list)
 export(cov_mle)
 export(cov_pool)
 export(cov_shrink_diag)
+export(diag_estimates)
 export(dlda)
 export(dqda)
 export(fast_cov_eigen)
