Added helper function to cross-validate reduced dimension for SimDiag. Closes #14

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ S3method(sdqda,default)
 S3method(sdqda,formula)
 S3method(simdiag,default)
 S3method(simdiag,formula)
+export(bhatta_cv)
 export(bhatta_simdiag)
 export(bhattacharyya)
 export(boot_parametric)
@@ -26,6 +27,7 @@ export(cov_list)
 export(cov_mle)
 export(cov_pool)
 export(cov_shrink_diag)
+export(cv_partition)
 export(diag_estimates)
 export(dlda)
 export(dqda)
