Added helper function compute the fast eigenvalue decomposition of the pooled sample covariance matrix.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(diag_estimates)
 export(dlda)
 export(dqda)
 export(fast_cov_eigen)
+export(fast_cov_pool_eigen)
 export(generate_blockdiag)
 export(generate_intraclass)
 export(is_diagonal)
