Housecleaning before merging regdiscrim and sparsediscrim packages.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,18 +26,10 @@ Collate:
     'sdlda.r'
     'sdqda.r'
     'stein-shrinkage.r'
-    'simdiag.r'
     'estimates.r'
     'helper-intercept.r'
     'data-intraclass.r'
     'data-block-autocorrelation.r'
     'helper-cov-mle.r'
-    'helper-shrinkage.r'
-    'helper-mean-shrinkage.r'
     'data-parametric-bootstrap.r'
-    'helper-pct-change.r'
-    'bhattacharyya.r'
-    'helper-fast-cov-eigen.r'
-    'helper-is-diagonal.r'
-    'helper-simdiag-cov.r'
-    'helper-transform.r'
+    'tong-shrinkage.r'
