--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,19 @@
 Package: sparsediscrim
 Title: Sparse Discriminant Analysis
 Version: 0.1.0
-Date: 2012-12-07
+Date: 2013-05-01
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
-Description: A collection of sparse discriminant analysis methods intended for
-    small-sample, high-dimensional data sets. The package includes the SimDiag
-    classifier, which simultaneously diagonalizes the sample covariance matrices
-    from each class in a linear subspace. Furthermore, the package includes
-    several Diagonal Discriminant Analysis methods, which are special cases of
-    the well-known Naive Bayes classifier.
+Description: A collection of sparse and regularized discriminant analysis
+    methods intended for small-sample, high-dimensional data sets. The package
+    includes the High-Dimensional Regularized Discriminant Analysis classifier.
+    Furthermore, the package includes several Diagonal Discriminant Analysis
+    methods, which are special cases of the well-known Naive Bayes classifier.
 Depends:
-    car,
-    corpcor,
-    jointDiag
+    corpcor
 Suggests:
-    bdsmatrix
+    bdsmatrix,
+    car
 License: MIT
 URL: https://github.com/ramey/sparsediscrim,
     http://ramhiser.com
