Updated documentation and merged covariance-matrix estimation code.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,9 @@ Collate:
     'helper-intercept.r'
     'data-intraclass.r'
     'data-block-autocorrelation.r'
-    'helper-cov-mle.r'
     'data-parametric-bootstrap.r'
     'tong-shrinkage.r'
+    'hdrda.r'
+    'helper-cov.r'
+    'helper-cv.r'
+    'helper.r'
