--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@ S3method(dlda,default)
 S3method(dlda,formula)
 S3method(dqda,default)
 S3method(dqda,formula)
+S3method(hdrda,default)
+S3method(hdrda,formula)
 S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,sdlda)
@@ -15,15 +17,20 @@ S3method(sdlda,formula)
 S3method(sdqda,default)
 S3method(sdqda,formula)
 export(boot_parametric)
+export(cov_eigen)
 export(cov_list)
 export(cov_mle)
 export(cov_pool)
 export(cov_shrink_diag)
+export(cv_partition)
 export(dlda)
 export(dqda)
 export(generate_blockdiag)
 export(generate_intraclass)
+export(hdrda)
+export(hdrda_cv)
 export(model.select.rsdda)
+export(predict.hdrda)
 export(predict.rsdda)
 export(rsdda)
 export(sdlda)
@@ -31,3 +38,4 @@ export(sdqda)
 export(tong_mean_shrinkage)
 export(yj_inverse)
 export(yj_marginal)
+importFrom(corpcor,fast.svd)
