--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,4 +38,7 @@ export(sdqda)
 export(tong_mean_shrinkage)
 export(yj_inverse)
 export(yj_marginal)
+import(car)
+importFrom(bdsmatrix,bdsmatrix)
 importFrom(corpcor,fast.svd)
+importFrom(mvtnorm,rmvnorm)
