Lots of updates to pass devtools:::check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(hdrda,default)
 S3method(hdrda,formula)
 S3method(predict,dlda)
 S3method(predict,dqda)
+S3method(predict,hdrda)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
 S3method(print,dlda)
@@ -28,7 +29,6 @@ export(generate_blockdiag)
 export(generate_intraclass)
 export(hdrda)
 export(hdrda_cv)
-export(predict.hdrda)
 export(sdlda)
 export(sdqda)
 export(tong_mean_shrinkage)
