Lots of speed improvements to hdrda.
- The same matrix calculations were being repeated. Now compute them once and use over and over.
- Also, added solve_chol() -- inverse of symmetric, pos-def matrix via Cholesky.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(hdrda)
 export(hdrda_cv)
 export(sdlda)
 export(sdqda)
+export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
 importFrom(corpcor,fast.svd)
