--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,18 @@ S3method(predict,dqda)
 S3method(predict,hdrda)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
+S3method(predict,smdlda)
 S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,sdlda)
 S3method(print,sdqda)
+S3method(print,smdlda)
 S3method(sdlda,default)
 S3method(sdlda,formula)
 S3method(sdqda,default)
 S3method(sdqda,formula)
+S3method(smdlda,default)
+S3method(smdlda,formula)
 export(cov_eigen)
 export(cov_list)
 export(cov_mle)
@@ -31,6 +35,7 @@ export(hdrda)
 export(hdrda_cv)
 export(sdlda)
 export(sdqda)
+export(smdlda)
 export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
