Moved Tong et al.'s (2012) SmDQDA classifier to smdqda

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,17 +10,21 @@ S3method(predict,hdrda)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
 S3method(predict,smdlda)
+S3method(predict,smdqda)
 S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,sdlda)
 S3method(print,sdqda)
 S3method(print,smdlda)
+S3method(print,smdqda)
 S3method(sdlda,default)
 S3method(sdlda,formula)
 S3method(sdqda,default)
 S3method(sdqda,formula)
 S3method(smdlda,default)
 S3method(smdlda,formula)
+S3method(smdqda,default)
+S3method(smdqda,formula)
 export(cov_eigen)
 export(cov_list)
 export(cov_mle)
@@ -36,6 +40,7 @@ export(hdrda_cv)
 export(sdlda)
 export(sdqda)
 export(smdlda)
+export(smdqda)
 export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
