Added the lda_pseudo classifier along with unit tests.
The actual classifier: Linear Discriminant Analysis (LDA) with the
Moore-Penrose Pseudo-Inverse

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,11 @@ Collate:
     'helper.r'
     'smdlda.r'
     'smdqda.r'
+    'lda-pseudo.r'
+    'mdeb.r'
+    'mdmeb.r'
+    'mdmp.r'
+    'mlda.r'
+    'nlda.r'
+    'rda.r'
+    'rda_hastie.r'
