--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,27 @@ S3method(dqda,default)
 S3method(dqda,formula)
 S3method(hdrda,default)
 S3method(hdrda,formula)
+S3method(lda_pseudo,default)
+S3method(lda_pseudo,formula)
 S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,hdrda)
+S3method(predict,lda_pseudo)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
 S3method(predict,smdlda)
 S3method(predict,smdqda)
 S3method(print,dlda)
 S3method(print,dqda)
+S3method(print,lda_pseudo)
 S3method(print,sdlda)
 S3method(print,sdqda)
 S3method(print,smdlda)
 S3method(print,smdqda)
+S3method(rda,default)
+S3method(rda,formula)
+S3method(rda_hastie,default)
+S3method(rda_hastie,formula)
 S3method(sdlda,default)
 S3method(sdlda,formula)
 S3method(sdqda,default)
@@ -37,6 +45,22 @@ export(generate_blockdiag)
 export(generate_intraclass)
 export(hdrda)
 export(hdrda_cv)
+export(lda_pseudo)
+export(mdeb)
+export(mdmeb)
+export(mdmp)
+export(mlda)
+export(nlda)
+export(predict.rda)
+export(predict.rda_hastie)
+export(predict_mdeb)
+export(predict_mdmeb)
+export(predict_mdmp)
+export(predict_mlda)
+export(predict_nlda)
+export(rda)
+export(rda_cv)
+export(rda_hastie)
 export(sdlda)
 export(sdqda)
 export(smdlda)
