Added the MDEB classifier along with unit tests
The actual classifier: Minimum Distance Empirical Bayesian
Estimator (MDEB) classifier from Srivastava and Kubokawa (2007)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,13 @@ S3method(hdrda,default)
 S3method(hdrda,formula)
 S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
+S3method(mdeb,default)
+S3method(mdeb,formula)
 S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,hdrda)
 S3method(predict,lda_pseudo)
+S3method(predict,mdeb)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
 S3method(predict,smdlda)
@@ -17,6 +20,7 @@ S3method(predict,smdqda)
 S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,lda_pseudo)
+S3method(print,mdeb)
 S3method(print,sdlda)
 S3method(print,sdqda)
 S3method(print,smdlda)
@@ -53,7 +57,6 @@ export(mlda)
 export(nlda)
 export(predict.rda)
 export(predict.rda_hastie)
-export(predict_mdeb)
 export(predict_mdmeb)
 export(predict_mdmp)
 export(predict_mlda)
