Added the MDMP classifier along with unit tests
The actual classifier: Minimum Distance Rule using Moore-Penrose
Inverse (MDMP) classifier from Srivastava and Kubokawa (2007)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,14 @@ S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
 S3method(mdeb,default)
 S3method(mdeb,formula)
+S3method(mdmp,default)
+S3method(mdmp,formula)
 S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,hdrda)
 S3method(predict,lda_pseudo)
 S3method(predict,mdeb)
+S3method(predict,mdmp)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
 S3method(predict,smdlda)
@@ -21,6 +24,7 @@ S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,lda_pseudo)
 S3method(print,mdeb)
+S3method(print,mdmp)
 S3method(print,sdlda)
 S3method(print,sdqda)
 S3method(print,smdlda)
@@ -58,7 +62,6 @@ export(nlda)
 export(predict.rda)
 export(predict.rda_hastie)
 export(predict_mdmeb)
-export(predict_mdmp)
 export(predict_mlda)
 export(predict_nlda)
 export(rda)
