--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
 S3method(mdeb,default)
 S3method(mdeb,formula)
+S3method(mdmeb,default)
+S3method(mdmeb,formula)
 S3method(mdmp,default)
 S3method(mdmp,formula)
 S3method(predict,dlda)
@@ -15,6 +17,7 @@ S3method(predict,dqda)
 S3method(predict,hdrda)
 S3method(predict,lda_pseudo)
 S3method(predict,mdeb)
+S3method(predict,mdmeb)
 S3method(predict,mdmp)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
@@ -24,6 +27,7 @@ S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,lda_pseudo)
 S3method(print,mdeb)
+S3method(print,mdmeb)
 S3method(print,mdmp)
 S3method(print,sdlda)
 S3method(print,sdqda)
@@ -61,7 +65,6 @@ export(mlda)
 export(nlda)
 export(predict.rda)
 export(predict.rda_hastie)
-export(predict_mdmeb)
 export(predict_mlda)
 export(predict_nlda)
 export(rda)
