Added the lda_schafer classifier along with unit tests
The actual classifier: Linear Discriminant Analysis (LDA) using the
covariance matrix estimator from Schafer and Strimmer (2005)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(hdrda,default)
 S3method(hdrda,formula)
 S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
+S3method(lda_schafer,default)
+S3method(lda_schafer,formula)
 S3method(mdeb,default)
 S3method(mdeb,formula)
 S3method(mdmeb,default)
@@ -16,6 +18,7 @@ S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,hdrda)
 S3method(predict,lda_pseudo)
+S3method(predict,lda_schafer)
 S3method(predict,mdeb)
 S3method(predict,mdmeb)
 S3method(predict,mdmp)
@@ -26,6 +29,7 @@ S3method(predict,smdqda)
 S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,lda_pseudo)
+S3method(print,lda_schafer)
 S3method(print,mdeb)
 S3method(print,mdmeb)
 S3method(print,mdmp)
@@ -56,13 +60,12 @@ export(generate_intraclass)
 export(hdrda)
 export(hdrda_cv)
 export(lda_pseudo)
+export(lda_schafer)
 export(mdeb)
 export(mdmeb)
 export(mdmp)
-export(mlda)
 export(nlda)
 export(predict.rda)
-export(predict_mlda)
 export(predict_nlda)
 export(rda)
 export(rda_cv)
@@ -74,4 +77,5 @@ export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
 importFrom(corpcor,fast.svd)
+importFrom(corpcor,invcov.shrink)
 importFrom(mvtnorm,rmvnorm)
