Added the lda_thomaz classifier along with unit tests
The actual classifier: Linear Discriminant Analysis (LDA) using the
covariance matrix estimator from Thomaz, Kitani, and Gillies (2006)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
 S3method(lda_schafer,default)
 S3method(lda_schafer,formula)
+S3method(lda_thomaz,default)
+S3method(lda_thomaz,formula)
 S3method(mdeb,default)
 S3method(mdeb,formula)
 S3method(mdmeb,default)
@@ -19,6 +21,7 @@ S3method(predict,dqda)
 S3method(predict,hdrda)
 S3method(predict,lda_pseudo)
 S3method(predict,lda_schafer)
+S3method(predict,lda_thomaz)
 S3method(predict,mdeb)
 S3method(predict,mdmeb)
 S3method(predict,mdmp)
@@ -30,6 +33,7 @@ S3method(print,dlda)
 S3method(print,dqda)
 S3method(print,lda_pseudo)
 S3method(print,lda_schafer)
+S3method(print,lda_thomaz)
 S3method(print,mdeb)
 S3method(print,mdmeb)
 S3method(print,mdmp)
@@ -61,14 +65,12 @@ export(hdrda)
 export(hdrda_cv)
 export(lda_pseudo)
 export(lda_schafer)
+export(lda_thomaz)
 export(mdeb)
 export(mdmeb)
 export(mdmp)
-export(nlda)
 export(predict.rda)
-export(predict_nlda)
 export(rda)
-export(rda_cv)
 export(sdlda)
 export(sdqda)
 export(smdlda)
