--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sparsediscrim
-Title: Sparse Discriminant Analysis
+Title: Sparse and Regularized Discriminant Analysis
 Version: 0.2
-Date: 2014-03-26
+Date: 2014-03-29
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: A collection of sparse and regularized discriminant analysis
@@ -13,7 +13,7 @@ Imports:
     corpcor,
     bdsmatrix,
     mvtnorm
-License: MIT
+License: MIT + file LICENSE
 URL: https://github.com/ramey/sparsediscrim,
     http://ramhiser.com
 Collate:
