--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(predict,smdlda)
 S3method(predict,smdqda)
 S3method(print,dlda)
 S3method(print,dqda)
+S3method(print,hdrda)
 S3method(print,lda_pseudo)
 S3method(print,lda_schafer)
 S3method(print,lda_thomaz)
