--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sparsediscrim
 Title: Sparse and Regularized Discriminant Analysis
-Version: 0.2
-Date: 2014-03-31
+Version: 0.2.1
+Date: 2014-05-08
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: A collection of sparse and regularized discriminant analysis
@@ -12,5 +12,5 @@ Imports:
     bdsmatrix,
     mvtnorm
 License: MIT + file LICENSE
-URL: https://github.com/ramey/sparsediscrim,
+URL: https://github.com/ramhiser/sparsediscrim,
     http://ramhiser.com
