dplyr::arrange makes things easier to read

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,4 +79,5 @@ export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
 importFrom(corpcor,fast.svd)
 importFrom(corpcor,invcov.shrink)
+importFrom(dplyr,arrange)
 importFrom(mvtnorm,rmvnorm)
