--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sparsediscrim
 Title: Sparse and Regularized Discriminant Analysis
 Version: 0.2.1
-Date: 2014-05-08
+Date: 2014-09-15
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: A collection of sparse and regularized discriminant analysis
@@ -10,6 +10,7 @@ Description: A collection of sparse and regularized discriminant analysis
 Imports:
     corpcor,
     bdsmatrix,
+    dplyr,
     mvtnorm
 License: MIT + file LICENSE
 URL: https://github.com/ramhiser/sparsediscrim,
