Added log-determinant helper function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(hdrda_cv)
 export(lda_pseudo)
 export(lda_schafer)
 export(lda_thomaz)
+export(log_determinant)
 export(mdeb)
 export(mdmeb)
 export(mdmp)
