Updated generate_blockdiag to accept individual population mean vectors.
Also, added to unit tests for generate_blockdiag.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,8 @@ S3method(smdlda,default)
 S3method(smdlda,formula)
 S3method(smdqda,default)
 S3method(smdqda,formula)
+export(cov_autocorrelation)
+export(cov_block_autocorrelation)
 export(cov_eigen)
 export(cov_list)
 export(cov_mle)
