--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(smdqda)
 export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
+importFrom(corpcor,cov.shrink)
 importFrom(corpcor,fast.svd)
 importFrom(corpcor,invcov.shrink)
 importFrom(dplyr,arrange)
