Plot of HDRDA tuning-parameter error grids #32

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(mdmeb,default)
 S3method(mdmeb,formula)
 S3method(mdmp,default)
 S3method(mdmp,formula)
+S3method(plot,hdrda_cv)
 S3method(predict,dlda)
 S3method(predict,dqda)
 S3method(predict,hdrda)
@@ -84,5 +85,14 @@ importFrom(corpcor,cov.shrink)
 importFrom(corpcor,fast.svd)
 importFrom(corpcor,invcov.shrink)
 importFrom(dplyr,arrange)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_discrete)
+importFrom(ggplot2,theme)
 importFrom(mvtnorm,dmvnorm)
 importFrom(mvtnorm,rmvnorm)
