--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: sparsediscrim
 Title: Sparse and Regularized Discriminant Analysis
 Version: 0.2.2
-Date: 2014-02-17
+Date: 2015-10-20
 Author: John A. Ramey <johnramey@gmail.com>
 Maintainer: John A. Ramey <johnramey@gmail.com>
 Description: A collection of sparse and regularized discriminant analysis
     methods intended for small-sample, high-dimensional data sets. The package
     features the High-Dimensional Regularized Discriminant Analysis classifier.
 Imports:
-    corpcor,
     bdsmatrix,
+    corpcor,
     dplyr,
+    ggplot2,
     mvtnorm
 License: MIT + file LICENSE
 URL: https://github.com/ramhiser/sparsediscrim,
