Import functions from stats package because reasons #35

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,3 +96,11 @@ importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,theme)
 importFrom(mvtnorm,dmvnorm)
 importFrom(mvtnorm,rmvnorm)
+importFrom(stats,cov)
+importFrom(stats,dnorm)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,terms)
+importFrom(stats,update)
+importFrom(stats,var)
