smdlda -> lda_shrink_mean

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
 S3method(lda_schafer,default)
 S3method(lda_schafer,formula)
+S3method(lda_shrink_mean,default)
+S3method(lda_shrink_mean,formula)
 S3method(lda_thomaz,default)
 S3method(lda_thomaz,formula)
 S3method(mdeb,default)
@@ -21,6 +23,7 @@ S3method(predict,hdrda)
 S3method(predict,lda_diag)
 S3method(predict,lda_pseudo)
 S3method(predict,lda_schafer)
+S3method(predict,lda_shrink_mean)
 S3method(predict,lda_thomaz)
 S3method(predict,mdeb)
 S3method(predict,mdmeb)
@@ -28,12 +31,12 @@ S3method(predict,mdmp)
 S3method(predict,qda_diag)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
-S3method(predict,smdlda)
 S3method(predict,smdqda)
 S3method(print,hdrda)
 S3method(print,lda_diag)
 S3method(print,lda_pseudo)
 S3method(print,lda_schafer)
+S3method(print,lda_shrink_mean)
 S3method(print,lda_thomaz)
 S3method(print,mdeb)
 S3method(print,mdmeb)
@@ -41,7 +44,6 @@ S3method(print,mdmp)
 S3method(print,qda_diag)
 S3method(print,sdlda)
 S3method(print,sdqda)
-S3method(print,smdlda)
 S3method(print,smdqda)
 S3method(qda_diag,default)
 S3method(qda_diag,formula)
@@ -49,8 +51,6 @@ S3method(sdlda,default)
 S3method(sdlda,formula)
 S3method(sdqda,default)
 S3method(sdqda,formula)
-S3method(smdlda,default)
-S3method(smdlda,formula)
 S3method(smdqda,default)
 S3method(smdqda,formula)
 export(cov_autocorrelation)
@@ -68,6 +68,7 @@ export(hdrda_cv)
 export(lda_diag)
 export(lda_pseudo)
 export(lda_schafer)
+export(lda_shrink_mean)
 export(lda_thomaz)
 export(log_determinant)
 export(mdeb)
@@ -76,7 +77,6 @@ export(mdmp)
 export(qda_diag)
 export(sdlda)
 export(sdqda)
-export(smdlda)
 export(smdqda)
 export(solve_chol)
 export(tong_mean_shrinkage)
