--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,9 +29,9 @@ S3method(predict,mdeb)
 S3method(predict,mdmeb)
 S3method(predict,mdmp)
 S3method(predict,qda_diag)
+S3method(predict,qda_shrink_mean)
 S3method(predict,sdlda)
 S3method(predict,sdqda)
-S3method(predict,smdqda)
 S3method(print,hdrda)
 S3method(print,lda_diag)
 S3method(print,lda_pseudo)
@@ -42,17 +42,17 @@ S3method(print,mdeb)
 S3method(print,mdmeb)
 S3method(print,mdmp)
 S3method(print,qda_diag)
+S3method(print,qda_shrink_mean)
 S3method(print,sdlda)
 S3method(print,sdqda)
-S3method(print,smdqda)
 S3method(qda_diag,default)
 S3method(qda_diag,formula)
+S3method(qda_shrink_mean,default)
+S3method(qda_shrink_mean,formula)
 S3method(sdlda,default)
 S3method(sdlda,formula)
 S3method(sdqda,default)
 S3method(sdqda,formula)
-S3method(smdqda,default)
-S3method(smdqda,formula)
 export(cov_autocorrelation)
 export(cov_block_autocorrelation)
 export(cov_eigen)
@@ -75,9 +75,9 @@ export(mdeb)
 export(mdmeb)
 export(mdmp)
 export(qda_diag)
+export(qda_shrink_mean)
 export(sdlda)
 export(sdqda)
-export(smdqda)
 export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
