--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,16 +4,18 @@ S3method(hdrda,default)
 S3method(hdrda,formula)
 S3method(lda_diag,default)
 S3method(lda_diag,formula)
+S3method(lda_emp_bayes,default)
+S3method(lda_emp_bayes,formula)
 S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
 S3method(lda_schafer,default)
 S3method(lda_schafer,formula)
+S3method(lda_shrink_cov,default)
+S3method(lda_shrink_cov,formula)
 S3method(lda_shrink_mean,default)
 S3method(lda_shrink_mean,formula)
 S3method(lda_thomaz,default)
 S3method(lda_thomaz,formula)
-S3method(mdeb,default)
-S3method(mdeb,formula)
 S3method(mdmeb,default)
 S3method(mdmeb,formula)
 S3method(mdmp,default)
@@ -21,38 +23,36 @@ S3method(mdmp,formula)
 S3method(plot,hdrda_cv)
 S3method(predict,hdrda)
 S3method(predict,lda_diag)
+S3method(predict,lda_emp_bayes)
 S3method(predict,lda_pseudo)
 S3method(predict,lda_schafer)
+S3method(predict,lda_shrink_cov)
 S3method(predict,lda_shrink_mean)
 S3method(predict,lda_thomaz)
-S3method(predict,mdeb)
 S3method(predict,mdmeb)
 S3method(predict,mdmp)
 S3method(predict,qda_diag)
+S3method(predict,qda_shrink_cov)
 S3method(predict,qda_shrink_mean)
-S3method(predict,sdlda)
-S3method(predict,sdqda)
 S3method(print,hdrda)
 S3method(print,lda_diag)
+S3method(print,lda_emp_bayes)
 S3method(print,lda_pseudo)
 S3method(print,lda_schafer)
+S3method(print,lda_shrink_cov)
 S3method(print,lda_shrink_mean)
 S3method(print,lda_thomaz)
-S3method(print,mdeb)
 S3method(print,mdmeb)
 S3method(print,mdmp)
 S3method(print,qda_diag)
+S3method(print,qda_shrink_cov)
 S3method(print,qda_shrink_mean)
-S3method(print,sdlda)
-S3method(print,sdqda)
 S3method(qda_diag,default)
 S3method(qda_diag,formula)
+S3method(qda_shrink_cov,default)
+S3method(qda_shrink_cov,formula)
 S3method(qda_shrink_mean,default)
 S3method(qda_shrink_mean,formula)
-S3method(sdlda,default)
-S3method(sdlda,formula)
-S3method(sdqda,default)
-S3method(sdqda,formula)
 export(cov_autocorrelation)
 export(cov_block_autocorrelation)
 export(cov_eigen)
@@ -66,18 +66,18 @@ export(generate_intraclass)
 export(hdrda)
 export(hdrda_cv)
 export(lda_diag)
+export(lda_emp_bayes)
 export(lda_pseudo)
 export(lda_schafer)
+export(lda_shrink_cov)
 export(lda_shrink_mean)
 export(lda_thomaz)
 export(log_determinant)
-export(mdeb)
 export(mdmeb)
 export(mdmp)
 export(qda_diag)
+export(qda_shrink_cov)
 export(qda_shrink_mean)
-export(sdlda)
-export(sdqda)
 export(solve_chol)
 export(tong_mean_shrinkage)
 importFrom(bdsmatrix,bdsmatrix)
