--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(lda_diag,default)
 S3method(lda_diag,formula)
 S3method(lda_emp_bayes,default)
 S3method(lda_emp_bayes,formula)
+S3method(lda_emp_bayes_eigen,default)
+S3method(lda_emp_bayes_eigen,formula)
 S3method(lda_pseudo,default)
 S3method(lda_pseudo,formula)
 S3method(lda_schafer,default)
@@ -16,20 +18,18 @@ S3method(lda_shrink_mean,default)
 S3method(lda_shrink_mean,formula)
 S3method(lda_thomaz,default)
 S3method(lda_thomaz,formula)
-S3method(mdmeb,default)
-S3method(mdmeb,formula)
 S3method(mdmp,default)
 S3method(mdmp,formula)
 S3method(plot,hdrda_cv)
 S3method(predict,hdrda)
 S3method(predict,lda_diag)
 S3method(predict,lda_emp_bayes)
+S3method(predict,lda_emp_bayes_eigen)
 S3method(predict,lda_pseudo)
 S3method(predict,lda_schafer)
 S3method(predict,lda_shrink_cov)
 S3method(predict,lda_shrink_mean)
 S3method(predict,lda_thomaz)
-S3method(predict,mdmeb)
 S3method(predict,mdmp)
 S3method(predict,qda_diag)
 S3method(predict,qda_shrink_cov)
@@ -37,12 +37,12 @@ S3method(predict,qda_shrink_mean)
 S3method(print,hdrda)
 S3method(print,lda_diag)
 S3method(print,lda_emp_bayes)
+S3method(print,lda_emp_bayes_eigen)
 S3method(print,lda_pseudo)
 S3method(print,lda_schafer)
 S3method(print,lda_shrink_cov)
 S3method(print,lda_shrink_mean)
 S3method(print,lda_thomaz)
-S3method(print,mdmeb)
 S3method(print,mdmp)
 S3method(print,qda_diag)
 S3method(print,qda_shrink_cov)
@@ -67,13 +67,13 @@ export(hdrda)
 export(hdrda_cv)
 export(lda_diag)
 export(lda_emp_bayes)
+export(lda_emp_bayes_eigen)
 export(lda_pseudo)
 export(lda_schafer)
 export(lda_shrink_cov)
 export(lda_shrink_mean)
 export(lda_thomaz)
 export(log_determinant)
-export(mdmeb)
 export(mdmp)
 export(qda_diag)
 export(qda_shrink_cov)
