mdmp -> lda_eigen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(hdrda,default)
 S3method(hdrda,formula)
 S3method(lda_diag,default)
 S3method(lda_diag,formula)
+S3method(lda_eigen,default)
+S3method(lda_eigen,formula)
 S3method(lda_emp_bayes,default)
 S3method(lda_emp_bayes,formula)
 S3method(lda_emp_bayes_eigen,default)
@@ -18,11 +20,10 @@ S3method(lda_shrink_mean,default)
 S3method(lda_shrink_mean,formula)
 S3method(lda_thomaz,default)
 S3method(lda_thomaz,formula)
-S3method(mdmp,default)
-S3method(mdmp,formula)
 S3method(plot,hdrda_cv)
 S3method(predict,hdrda)
 S3method(predict,lda_diag)
+S3method(predict,lda_eigen)
 S3method(predict,lda_emp_bayes)
 S3method(predict,lda_emp_bayes_eigen)
 S3method(predict,lda_pseudo)
@@ -30,12 +31,12 @@ S3method(predict,lda_schafer)
 S3method(predict,lda_shrink_cov)
 S3method(predict,lda_shrink_mean)
 S3method(predict,lda_thomaz)
-S3method(predict,mdmp)
 S3method(predict,qda_diag)
 S3method(predict,qda_shrink_cov)
 S3method(predict,qda_shrink_mean)
 S3method(print,hdrda)
 S3method(print,lda_diag)
+S3method(print,lda_eigen)
 S3method(print,lda_emp_bayes)
 S3method(print,lda_emp_bayes_eigen)
 S3method(print,lda_pseudo)
@@ -43,7 +44,6 @@ S3method(print,lda_schafer)
 S3method(print,lda_shrink_cov)
 S3method(print,lda_shrink_mean)
 S3method(print,lda_thomaz)
-S3method(print,mdmp)
 S3method(print,qda_diag)
 S3method(print,qda_shrink_cov)
 S3method(print,qda_shrink_mean)
@@ -66,6 +66,7 @@ export(generate_intraclass)
 export(hdrda)
 export(hdrda_cv)
 export(lda_diag)
+export(lda_eigen)
 export(lda_emp_bayes)
 export(lda_emp_bayes_eigen)
 export(lda_pseudo)
@@ -74,7 +75,6 @@ export(lda_shrink_cov)
 export(lda_shrink_mean)
 export(lda_thomaz)
 export(log_determinant)
-export(mdmp)
 export(qda_diag)
 export(qda_shrink_cov)
 export(qda_shrink_mean)
